# opcrew

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  main.rs
src/agents/: ceo.rs  factory.rs  hypothesis.rs  specialist.rs  verifier.rs
src/api/: client.rs  gemini.rs  local.rs  mod.rs  openai.rs  provider.rs  schema.rs  types.rs
src/domain/: agent.rs  plan.rs
src/execution/: budget.rs  mod.rs  prefetch.rs  routing.rs  runner.rs  triage.rs
src/infra/: commands.rs  discovery.rs  graph.rs
src/memory/: store.rs
src/observability/: export.rs  logging.rs
src/output/: formatter.rs
src/safety/: allowlist.rs  audit.rs  guardian.rs  secrets.rs
src/tools/: code_writer.rs  file_ops.rs  log_reader.rs  mod.rs  service.rs  shell.rs
src/watch/: monitor.rs  trigger.rs
