[package]
name = "opcrew"
version = "0.1.0"
edition = "2024"
description = "AI Agent Squad Creator — dynamic agent orchestration for devops and sysadmin problem solving"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
anyhow = "1"
jsonschema = "0.28"
tokio-util = "0.7"
governor = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
shlex = "1.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
colored = "2"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"
